# ProjectSetUpDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  requirements.txt
.github/workflows/: ci.yml  release.yml
lib/: CMakeLists.txt
lib/include/testlib/: testlib.hpp
lib/src/: testlib.cpp
test/: CMakeLists.txt  smoketest.cpp
